public interface IDraggable
{

}
